Se actualiza a version Java 11 y se agrega newProduct